--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,11 @@ gladiatorBackend/gladiatorWebApi/WebApi/packages.config
 gladiatorBackend/gladiatorWebApi/WebApi/Web.config
 gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
 gladiatorBackend/gladiatorWebApi/WebApi/Models/farmerForm.cs
+gladiatorBackend/gladiatorWebApi/WebApi/Models/Model1.Designer.cs
+gladiatorBackend/gladiatorWebApi/WebApi/Models/Model1.Context.tt
+gladiatorBackend/gladiatorWebApi/WebApi/Web.config
+gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
+gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
+gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
+gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
+gladiatorBackend/gladiatorWebApi/WebApi/Web.config
