changes in designs

--- a/gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
+++ b/gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
@@ -177,6 +177,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AdminMarket.cs" />
+    <Compile Include="Models\AllBids.cs" />
     <Compile Include="Models\bid.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -206,6 +208,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\PreviousBids.cs" />
     <Compile Include="Models\SoldHistory.cs" />
     <Compile Include="Models\user.cs">
       <DependentUpon>Model1.tt</DependentUpon>
