--- a/gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
+++ b/gladiatorBackend/gladiatorWebApi/WebApi/WebApi.csproj
@@ -189,6 +189,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CropsforSale.cs" />
+    <Compile Include="Models\Forgot.cs" />
     <Compile Include="Models\image.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
